# alliance

./: CMakeLists.txt  package.xml
config/: params0.yaml  params1.yaml  params2.yaml  params3.yaml
config_py/: params0.yaml  params1.yaml  params2.yaml  params3.yaml
include/alliance/: monitor_lib.h  monitor_lib_l.h
launch/: monitor.launch  multi.launch  multi_alliance.launch  rosaria.launch  single.launch  vrep_alliance.launch  vrep_l_alliance.launch
map/: sim.ttt
msg/: message.msg  message.msg~  motivation.msg  to_monitor.msg  to_monitor_l.msg
src/: alliance_class.py  callBack.py  l_alliance_allocation.py  l_alliance_class.py  monitor.cpp  monitor_l.cpp  task_allocation.py  tasks.py  utils.py
src/libs/: monitor_lib.cpp  monitor_lib_l.cpp
src/old/: alliance_robot1.cpp  alliance_robot2.cpp  alliance_robot3.cpp  entity_robot_alloc.cpp  entity_task_alloc.cpp
